tool/tests/snapshots/dotnet_target__string_reference@RawMyStruct.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()

---
// Automatically generated by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop.Raw;

#nullable enable

[StructLayout(LayoutKind.Sequential)]
public partial struct MyStruct
{
    private const string NativeLib = "rust";

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_new", ExactSpelling = true)]
    public static unsafe extern MyStruct New(byte* v, nuint vSz);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_destroy", ExactSpelling = true)]
    public static unsafe extern void Destroy(MyStruct* self);
}

