tool/tests/snapshots/dotnet_target__struct_documentation@Foo.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()

---
// Automatically generated by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

/// <summary>
/// Documentation for Foo.
/// Second line.
/// </summary>
public partial class Foo
{
    private Raw.Foo _inner;

    /// <summary>
    /// Documentation for x.
    /// </summary>
    public byte X
    {
        get
        {
            unsafe
            {
                return _inner.x;
            }
        }
        set
        {
            unsafe
            {
                _inner.x = value;
            }
        }
    }

    /// <summary>
    /// Creates a managed <c>Foo</c> from the raw representation.
    /// </summary>
    public unsafe Foo(Raw.Foo data)
    {
        _inner = data;
    }

    /// <summary>
    /// Documentation for get_x.
    /// </summary>
    public byte GetX()
    {
        unsafe
        {
            if (_inner == null)
            {
                throw new ObjectDisposedException("Foo");
            }
            byte retVal = Raw.Foo.GetX(_inner);
            return retVal;
        }
    }

    /// <summary>
    /// Returns a copy of the underlying raw representation.
    /// </summary>
    public Raw.Foo AsFFI()
    {
        return _inner;
    }
}

