tool/tests/snapshots/dotnet_target__take_ownership@NonOpaqueStruct.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()

---
// Automatically generated by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

public partial class NonOpaqueStruct: IDisposable
{
    private unsafe Raw.NonOpaqueStruct* _inner;
    private readonly bool _isAllocatedByRust;

    public byte A
    {
        get
        {
            unsafe
            {
                return _inner->a;
            }
        }
        set
        {
            unsafe
            {
                _inner->a = value;
            }
        }
    }

    public ushort B
    {
        get
        {
            unsafe
            {
                return _inner->b;
            }
        }
        set
        {
            unsafe
            {
                _inner->b = value;
            }
        }
    }

    public uint C
    {
        get
        {
            unsafe
            {
                return _inner->c;
            }
        }
        set
        {
            unsafe
            {
                _inner->c = value;
            }
        }
    }

    /// <summary>
    /// Creates a managed <c>NonOpaqueStruct</c> from a raw handle.
    /// </summary>
    /// <remarks>
    /// Safety: you should not build two managed objects using the same raw handle (may causes use-after-free and double-free).
    /// </remarks>
    /// <remarks>
    /// This constructor assumes the raw struct is allocated on Rust side.
    /// If implemented, the custom Drop implementation on Rust side WILL run on destruction.
    /// </remarks>
    public unsafe NonOpaqueStruct(Raw.NonOpaqueStruct* handle)
    {
        _inner = handle;
        _isAllocatedByRust = true;
    }

    /// <summary>
    /// Creates a managed <c>NonOpaqueStruct</c> from the raw struct.
    /// </summary>
    /// <remarks>
    /// This constructor allocates the raw struct on C# side.
    /// If a custom Drop implementation is implemented on Rust side, it will NOT run on destruction.
    /// </remarks>
    public NonOpaqueStruct(Raw.NonOpaqueStruct handle)
    {
        unsafe
        {
            _inner = (Raw.NonOpaqueStruct*)Marshal.AllocHGlobal(sizeof(Raw.NonOpaqueStruct));
            Buffer.MemoryCopy(&handle, _inner, sizeof(Raw.NonOpaqueStruct), sizeof(Raw.NonOpaqueStruct));
            _isAllocatedByRust = false;
        }
    }

    /// <summary>
    /// Returns the underlying raw handle.
    /// </summary>
    public unsafe Raw.NonOpaqueStruct* AsFFI()
    {
        return _inner;
    }

    /// <summary>
    /// Marks this object as moved into Rust side.
    /// </summary>
    /// <remarks>
    /// Safety: this instance must be allocated on Rust side.
    /// </remarks>
    /// <exception cref="DiplomatUnmovableObject"></exception>
    public void MarkAsMoved()
    {
        unsafe
        {
            if (!_isAllocatedByRust)
            {
                throw new DiplomatUnmovableObject("NonOpaqueStruct", "not allocated by Rust");
            }
            if (_inner == null)
            {
                throw new ObjectDisposedException("NonOpaqueStruct");
            }
            _inner = null;
        }
    }

    /// <summary>
    /// Restores unmanaged ressource handle to this object.
    /// </summary>
    /// <remarks>
    /// Safety: the pointee must be allocated on Rust side.
    /// </remarks>
    public unsafe void RestoreHandle(Raw.NonOpaqueStruct* handle)
    {
        _inner = handle;
    }

    /// <summary>
    /// Destroys the underlying object immediately.
    /// </summary>
    public void Dispose()
    {
        unsafe
        {
            if (_inner == null)
            {
                return;
            }

            if (_isAllocatedByRust)
            {
                Raw.NonOpaqueStruct.Destroy(_inner);
            }
            else
            {
                Marshal.FreeHGlobal((IntPtr)_inner);
            }

            _inner = null;

            GC.SuppressFinalize(this);
        }
    }

    ~NonOpaqueStruct()
    {
        Dispose();
    }
}

