tool/tests/snapshots/dotnet_target__take_ownership@RawMyStruct.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()

---
// Automatically generated by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop.Raw;

#nullable enable

[StructLayout(LayoutKind.Sequential)]
public partial struct MyStruct
{
    private const string NativeLib = "rust";

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_from_other", ExactSpelling = true)]
    public static unsafe extern MyStruct* FromOther(MyOtherStruct* myOtherStruct);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_from_other_opt", ExactSpelling = true)]
    public static unsafe extern MyStruct* FromOtherOpt(MyOtherStruct* myOtherStruct);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_from_non_opaque", ExactSpelling = true)]
    public static unsafe extern MyStruct* FromNonOpaque(NonOpaqueStruct* nonOpaque);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_from_non_opaque_opt", ExactSpelling = true)]
    public static unsafe extern MyStruct* FromNonOpaqueOpt(NonOpaqueStruct* nonOpaque);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_destroy", ExactSpelling = true)]
    public static unsafe extern void Destroy(MyStruct* self);
}

