tool/tests/snapshots/dotnet_target__take_ownership@RawNonOpaqueStruct.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()

---
// Automatically generated by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop.Raw;

#nullable enable

[StructLayout(LayoutKind.Sequential)]
public partial struct NonOpaqueStruct
{
    private const string NativeLib = "rust";

    public byte a;

    public ushort b;

    public uint c;

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "NonOpaqueStruct_destroy", ExactSpelling = true)]
    public static unsafe extern void Destroy(NonOpaqueStruct* self);
}

